# 14_Biolit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cors_server.py  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/biolit/: __init__.py  database.py  export_api.py  label_studio.py  settings.py  storage.py
backend/ml/: README.md  __init__.py
backend/ml/classification/: __init__.py  service.py
backend/ml/crop_inference/: __init__.py  config.yaml  model_loader.py  service.py
backend/pipelines/: run.py  worker.py
backend/tests/: test_database.py  test_export_api.py  test_label_studio.py  test_pipeline.py  test_storage.py
biolit/: __init__.py  create_table.py  export_api.py  flow_gatekeeper.py  geoloc.py  label_studio.py  label_studio_postprocessing.py  lien_doris.py  minio.py  observations.py  postgres.py  s3.py  taxref.py
biolit/config/: 2026_esp_nouveaux_arrivants.xlsx  focus_species.csv
cmd/: export_inpn.py  prepare_labelstudio.py
d4g-utils/: install_poetry.sh
geoloc/: check_geoloc.py
infra/: .dockerignore  Dockerfile  docker-compose.yml  init.sql
label-studio/: README.md
label-studio/config/: crop.xml  validation.xml
metabase/: README.md
ml/classification/: classifier_bioclip.py  classifier_infer_v2.py  classifier_mlp.py  classifier_s3.py  config.py  db.py  pipeline_classification.py
ml/classification/BioCLIP/: README.md
ml/classification/BioCLIP/models/: README.md  best_model_top50.pth  prototypes_v4.pt
ml/classification/BioCLIP/results/: README.md  predictions_sample.csv
ml/classification/BioCLIP/scripts/: infer_local_v4  infer_local_v5.py  infer_local_v6.py
ml/classification/BioClipv2/: Readme.md  build_classify_dataset.py  classifier_infer.py  classifier_train.py  config.py
ml/classification/BioClipv2/results/: bioclip_features.npz  mlp_model.pt  predictions.csv  proto_model.npz  report_proto_clip_sans_crop.html  tax_lookup.pkl
ml/crop_inference/: README.md  __init__.py  config.yaml  model_loader.py  predict.py
ml/crop_inference/utils/: logger.py
ml/prompt_textuel_yolo/: README.md  benchmark_gdino_prompts.py  crop_pipeline.py
ml/yolov8/: README.md  build_dataset.py
ml/yolov8_DINO/: README.md  autodistill_boostrap.py  autodistill_label.py  autodistill_train.py  build_dataset.py  check_dataset.py  finetune.py
ml/yolov8_DINO/configs/: autodistill_boostrap.yaml  build_dataset.yaml  finetune.yaml
ml/yolov8_DINO/notebooks/: autodistill_dino.ipynb
ml/yolov8_DINO/utils/: logger.py
pipelines/: README.md  run.py
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml  results.csv
sample_data/: README.md
sample_data/yolov8_DINO/: labels.csv
sample_data/yolov8_DINO/images/: README.md
tests/: test_export_api.py  test_filter_observations_for_crop.py  test_geoloc.py  test_observations.py
tests/visualisation/: test_species_distribution.py
