[project]
name = "14_Biolit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "polars",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "requests",
    "geopandas",
    "shapely",
    "pyarrow",
    "python-dotenv",
    "structlog",
    "matplotlib",
    "folium"
]

[tool.pytest.ini_options]
pythonpath = ["."]
