[project]
name = "14_Biolit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "polars",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "requests",
    "geopandas",
    "shapely",
    "pyarrow",
    "python-dotenv",
    "structlog",
    "pre-commit>=4.5.1",
    "matplotlib",
    "folium",
    "minio>=7.2.20",
    "label-studio-sdk>=2.0.19",
]

[tool.pytest.ini_options]
pythonpath = ["."]
