[project]
name = "biolit"
version = "1.0.0"
description = "Backend de production pour le traitement des observations BioLit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.89",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
ml = [
    "huggingface-hub>=0.36.2",
    "numpy>=2.0",
    "open-clip-torch>=2.24.0",
    "opencv-python-headless>=4.10",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.20",
    "ultralytics>=8.0.81",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff==0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.uv]
exclude-dependencies = ["opencv-python"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
